--- a/css/index.css
+++ b/css/index.css
@@ -134,3 +134,121 @@ button:hover{
 .artist img{
     width:100%;
 }
+
+@media(max-width:500px) {
+    body {
+        font-size: 1rem;
+    }
+    img {	
+        /* height: relative;	 */
+        height: 100%;
+        object-fit: cover;	
+        display: flex;	
+        margin: 2%;	
+        margin-top: 4%;	
+        margin-left: auto;	
+        margin-right: auto;
+        border-radius: 2%;
+    }	
+    nav span{
+        border-left:1px solid #626262;
+    }
+    /* h1, p, .name, .bio {	
+        font-family: 'Raleway', sans-serif;	
+        text-align: center;	
+        margin: 4%;	
+    }	 */
+    h1{
+        font-size:3.4rem;
+        margin:0;
+    }
+    a {	
+        text-decoration: none;	
+        color: black;
+        font-size:1.4rem;	
+    }	
+    .title-container div {	
+        /* display: flex; */
+        /* height: 20%; */
+        height: 40vh;
+        background-image: url('https://upload.wikimedia.org/wikipedia/commons/thumb/7/79/John_Martin_-_The_Plains_of_Heaven_-_Google_Art_Project.jpg/1920px-John_Martin_-_The_Plains_of_Heaven_-_Google_Art_Project.jpg');		
+        /* background-position: center;	 */
+        color: white;	
+        width:100%;
+        /* margin-left: 0%; */
+        /* margin-right: 0%; */
+        background-size: contain;
+        background-repeat: no-repeat;
+        margin-bottom: 0%;
+        padding-bottom: 0%;
+    }
+    .title-container hr{
+        width:100%;
+    }
+    button{
+        font-size: 1.2rem;
+        border-radius:3px;
+        border:1px solid #626262;
+    }
+
+    .artists-container {
+        /* border: dotted; */
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+    }
+    .artist{
+        width:75%;
+        text-align:center;
+    }
+    .artist img{
+        width:70%;
+    }
+
+    /* nav {
+        flex-direction: column;
+        align-items: center;
+    }
+    .logo {
+        width: 20%;
+    }
+    .links {
+        width: 100%;
+    }
+
+    #about {
+        justify-content: flex-start;
+    }
+
+    #about div {
+        margin-left: 10%;
+        width: 40%;
+    }
+    .container {
+        flex-direction: column;
+        align-items: center;
+    }
+    .container div {
+        width: 80%;
+
+    }
+    .bg {
+        height: 60vh;
+    }
+    .mobile {
+        flex-direction: column-reverse;
+    }
+    .footer-parent {
+        flex-direction: column-reverse;
+        align-items: center;
+
+    }
+    .left, .right {
+        width: 80%;
+    }
+
+    .copyright {
+        text-align: center;
+        margin: 0;
+    } */
+}
